--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         body {
             font-family: 'Times New Roman', Times, serif;
             line-height: 1.6;
-            color: #ffffff;
-            background: #0d1117;
+            color: #2c3e50;
+            background: #87ceeb;
             min-height: 100vh;
         }
 
-        /* GitHub dark theme animated background */
+        /* Beach theme animated background */
         .bg-animation {
             position: fixed;
             top: 0;
@@ -28,7 +28,14 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background: linear-gradient(135deg, #0d1117 0%, #161b22 50%, #0d1117 100%);
+            background: linear-gradient(
+                180deg, 
+                #87ceeb 0%,     /* Sky blue */
+                #b0e0e6 30%,    /* Powder blue */
+                #40e0d0 60%,    /* Turquoise */
+                #20b2aa 80%,    /* Light sea green */
+                #f4a460 100%    /* Sandy brown */
+            );
         }
 
         .bg-animation::before {
@@ -38,13 +45,32 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="20" cy="20" r="1" fill="%2330363d" opacity="0.3"/><circle cx="80" cy="40" r="1.5" fill="%23484f58" opacity="0.2"/><circle cx="50" cy="70" r="1" fill="%23238636" opacity="0.1"/></svg>') repeat;
-            animation: float 30s infinite linear;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><circle cx="30" cy="40" r="2" fill="%23ffffff" opacity="0.8"/><circle cx="160" cy="80" r="3" fill="%23ffffff" opacity="0.6"/><circle cx="80" cy="120" r="1.5" fill="%23ffffff" opacity="0.9"/><circle cx="140" cy="160" r="2.5" fill="%23ffffff" opacity="0.7"/><path d="M20,180 Q60,175 100,180 T180,175" stroke="%23ffffff" stroke-width="1" fill="none" opacity="0.4"/></svg>') repeat;
+            animation: beachWaves 25s infinite linear;
         }
 
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            100% { transform: translateY(-50px); }
+        .bg-animation::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 200px;
+            background: linear-gradient(
+                0deg,
+                #f4a460 0%,
+                #daa520 30%,
+                rgba(244, 164, 96, 0.8) 70%,
+                transparent 100%
+            );
+            z-index: 1;
+        }
+
+        @keyframes beachWaves {
+            0% { transform: translateX(0px) translateY(0px); }
+            33% { transform: translateX(-20px) translateY(-10px); }
+            66% { transform: translateX(20px) translateY(10px); }
+            100% { transform: translateX(0px) translateY(0px); }
         }
 
         .container {
