--- a/index.html
+++ b/index.html
@@ -428,11 +428,13 @@
             margin: 0 auto;
         }
 
-        .my-articles {
+        .my-articles,
+        .publish-section {
             margin-bottom: 64px;
         }
 
-        .my-articles h3 {
+        .my-articles h3,
+        .publish-section h3 {
             color: var(--white);
             font-size: 24px;
             margin-bottom: 32px;
@@ -844,10 +846,12 @@
                                 <p><strong>My Analysis:</strong> This exemplifies tariff elasticity destroying market viability for mid-tier international brands. Currency depreciation + tariff duties create compound cost pressure that pricing power cannot absorb. Retail sector analysis shows similar patterns across European apparel imports. Investment thesis: Short international retail ETFs with heavy US exposure, long domestic manufacturing plays. The broader trend suggests continued market share consolidation favoring domestic producers and large-scale importers with tariff absorption capacity.</p>
                             </div>
                         </div>
+                    </div>
 
-                        <!-- Form for publishing insights -->
+                    <!-- Publish New Insight Section -->
+                    <div class="publish-section">
+                        <h3>Publish New Insight</h3>
                         <div class="article-form">
-                            <h3>Publish New Insight</h3>
                             <p>Share your latest market analysis and insights</p>
                             
                             <form id="myArticleForm">
@@ -933,10 +937,10 @@
                     <div style="margin: 48px 0;">
                         <h3 style="color: #ffffff; font-size: 24px; margin-bottom: 24px;">Experience & Career Progression:</h3>
                         <ul style="text-align: left; max-width: 600px; margin: 16px auto; color: #ffffff; font-size: 16px; line-height: 1.8;">
-                            <li><strong style="color: #ffffff;">Data Scientist Intern</strong> - IDX Exchange (Current)</li>
-                            <li><strong style="color: #ffffff;">Financial Analyst Intern</strong> - Congero Technology Group </li>
-                            <li><strong style="color: #ffffff;">AI Researcher Fellow </strong> - Algoverse</li>
-                            <li><strong style="color: #ffffff;">Tech Production Management Intern</strong> - The Kigumi Group</li>
+                            <li><strong style="color: #ffffff;">Data Scientist Intern</strong> - IDX Exchange</li>
+                            <li><strong style="color: #ffffff;">Financial Analyst Intern</strong> - Congero Technology Group</li>
+                            <li><strong style="color: #ffffff;">AI Researcher</strong> - Algoverse</li>
+                            <li><strong style="color: #ffffff;">Tech Production Intern</strong> - Kigumi Group</li>
                         </ul>
                     </div>
                     
