--- a/index.html
+++ b/index.html
@@ -998,9 +998,9 @@
         document.addEventListener('DOMContentLoaded', function() {
             const typeElement = document.getElementById('typewriter');
             const texts = [
-                'Data Scientist Intern at IDX Exchange - Current Position',
+                'Data Scientist Intern at IDX Exchange',
                 'Previously: Financial Analyst at Congero Technology Group', 
-                'AI Researcher at Algoverse - Ongoing',
+                'AI Researcher at Algoverse',
                 'Junior at UMass Boston - Business Analytics'
             ];
             let textIndex = 0;
